--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.23", features = ["derive"] }
 regex = "1"
+
+[dev-dependencies]
+criterion = "0.4"
+tempfile = "3.3.0"
+
+[[bench]]
+name = "fgoi"
+harness = false
